Dodan dijagram aktivnosti za gitlab

--- a/dokumentacija/Dodatak.tex
+++ b/dokumentacija/Dodatak.tex
@@ -152,6 +152,15 @@
 				
 				
 			\end{longtabu}
+
+			\section*{Dijagrami pregleda promjena}
+		
+		\begin{figure}[H]
+			\includegraphics[scale=0.9]{slike/repository.png} %veličina slike u odnosu na originalnu datoteku i pozicija slike
+			\centering
+			\caption{Dijagrami aktivnosti na master grani}
+			\label{fig:aktivnost}
+		\end{figure}
 					
 					
 		\eject
