Dodatni sastanci, ažurirana tablica aktivnosti, ažurirani dijagrami za gitlab

--- a/dokumentacija/Dodatak.tex
+++ b/dokumentacija/Dodatak.tex
@@ -79,6 +79,29 @@
 				\item Podjela poslova koji se moraju obaviti do prve predaje projekta
 			\end{packed_item}
 		\end{packed_item}
+	
+		\item sastanak
+		\item[] \begin{packed_item}
+			\item Datum: 10. studenoga 2020.
+			\item: Prisustvovali: Mateja Iveta, Dora Horvat, Vedran Hernaus, Lea Brzica, Matija Holik, Denis Đurašinović , Dora Bortas
+			\item Teme sastanka:
+			\begin{packed_item}
+				\item Dogovor o načinu kriptiranja i hashiranju lozinki
+			\end{packed_item}
+		\end{packed_item}
+	
+			\item sastanak
+		\item[] \begin{packed_item}
+			\item Datum: 11. studenoga 2020.
+			\item: Prisustvovali: Mateja Iveta, Dora Horvat, Vedran Hernaus, Lea Brzica, Matija Holik, Denis Đurašinović , Dora Bortas
+			\item Teme sastanka:
+			\begin{packed_item}
+				\item Pregled trenutnog stanja projekta
+				\item Priprema za prvo kolokviranje
+				
+			\end{packed_item}
+		\end{packed_item}
+	
 			\item sastanak
 			\item[] \begin{packed_item}
 				\item Datum: 12. studenoga 2020.
@@ -88,6 +111,89 @@
 					\item Pregled generičkih funkcionalnosti aplikacije prije prve predaje
 				\end{packed_item}
 			\end{packed_item}
+		
+			\item sastanak
+			\item[] \begin{packed_item}
+				\item Datum: 3. prosinca 2020.
+				\item Prisustvovali: Mateja Iveta, Dora Horvat, Vedran Hernaus, Lea Brzica, Matija Holik, Denis Đurašinović , Dora Bortas, Ivana Cepetić, Hrvoje Šimić
+				\item Teme sastanka:
+				\begin{packed_item}
+					\item Kolokviranje prvog ciklusa projekta
+				\end{packed_item}
+			\end{packed_item}
+		
+			\item sastanak
+			\item[] \begin{packed_item}
+				\item Datum: 10. prosinca 2020.
+				\item Prisustvovali: Mateja Iveta, Dora Horvat, Vedran Hernaus, Lea Brzica, Matija Holik, Denis Đurašinović , Dora Bortas
+				\item Teme sastanka:
+				\begin{packed_item}
+					\item Podjela poslovna nakon kolokviranja
+				\end{packed_item}
+			\end{packed_item}
+		
+			\item sastanak
+			\item[] \begin{packed_item}
+				\item Datum: 29. prosinca 2020.
+				\item Prisustvovali: Mateja Iveta, Dora Horvat, Vedran Hernaus, Lea Brzica, Matija Holik, Denis Đurašinović , Dora Bortas
+				\item Teme sastanka:
+				\begin{packed_item}
+					\item Provjera napretka projekta
+					\item Ponovna podjela zadataka
+				\end{packed_item}
+			\end{packed_item}
+		
+			\item sastanak
+			\item[] \begin{packed_item}
+				\item Datum: 31. prosinca 2020.
+				\item Prisustvovali: Mateja Iveta, Dora Horvat, Vedran Hernaus, Lea Brzica, Matija Holik, Denis Đurašinović , Dora Bortas
+				\item Teme sastanka:
+				\begin{packed_item}
+					\item Provjera napretka projekta
+				\end{packed_item}
+			\end{packed_item}
+		
+			\item sastanak
+			\item[] \begin{packed_item}
+				\item Datum: 2. siječnja 2021.
+				\item Prisustvovali: Mateja Iveta, Dora Horvat, Vedran Hernaus, Lea Brzica, Matija Holik, Denis Đurašinović , Dora Bortas
+				\item Teme sastanka:
+				\begin{packed_item}
+					\item Dogovor o implementaciji lajkova
+				\end{packed_item}
+			\end{packed_item}
+		
+			\item sastanak
+			\item[] \begin{packed_item}
+				\item Datum: 3. siječnja 2021.
+				\item Prisustvovali: Mateja Iveta, Dora Horvat, Vedran Hernaus, Lea Brzica, Matija Holik, Denis Đurašinović , Dora Bortas
+				\item Teme sastanka:
+				\begin{packed_item}
+					\item Dogovor o algoritmu uparivanja oglasa
+				\end{packed_item}
+			\end{packed_item}
+		
+			\item sastanak
+			\item[] \begin{packed_item}
+				\item Datum: 4. siječnja 2021.
+				\item Prisustvovali: Mateja Iveta, Dora Horvat, Vedran Hernaus, Lea Brzica, Matija Holik, Denis Đurašinović , Dora Bortas
+				\item Teme sastanka:
+				\begin{packed_item}
+					\item Provjera napretka
+					\item Dogovor o nastavku rada na aplikaciji
+				\end{packed_item}
+			\end{packed_item}
+		
+			\item sastanak
+			\item[] \begin{packed_item}
+				\item Datum: 7. siječnja 2021.
+				\item Prisustvovali: Mateja Iveta, Dora Horvat, Vedran Hernaus, Lea Brzica, Matija Holik, Denis Đurašinović , Dora Bortas, Ivana Cepetić
+				\item Teme sastanka:
+				\begin{packed_item}
+					\item Prezentacija alfa verzije projekta
+				\end{packed_item}
+			\end{packed_item}
+			
 			%
 			
 		\end{packed_enum}
@@ -103,15 +209,15 @@
 			
 			\begin{longtabu} to \textwidth {|X[7, l]|X[1, c]|X[1, c]|X[1, c]|X[1, c]|X[1, c]|X[1, c]|X[1, c]|}
 								
-				\cline{2-8} \multicolumn{1}{c|}{\textbf{}} &     \multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime voditelja }}} & \multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} &
-				\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} &
-				\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} \\ \hline 
+				\cline{2-8} \multicolumn{1}{c|}{\textbf{}} &     \multicolumn{1}{c|}{\rotatebox{90}{\textbf{ Mateja Iveta }}} & \multicolumn{1}{c|}{\rotatebox{90}{\textbf{Dora Bortas }}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Dora Horvat }}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Lea Brzica }}} &
+				\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Vedran Hernaus }}} &
+				\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Matija Holik }}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Denis Đurašinović }}} \\ \hline 
 				\endfirsthead
 				
 			
-				\cline{2-8} \multicolumn{1}{c|}{\textbf{}} &     \multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime voditelja}}} & \multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} &
-				\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} &
-				\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ime Prezime }}} \\ \hline 
+				\cline{2-8} \multicolumn{1}{c|}{\textbf{}} &     \multicolumn{1}{c|}{\rotatebox{90}{\textbf{Mateja Iveta}}} & \multicolumn{1}{c|}{\rotatebox{90}{\textbf{Dora Bortas }}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Dora Horvat }}} &
+				\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Lea Brzica }}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Vedran Hernaus }}} &
+				\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Matija Holik }}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Denis Đurašinović }}} \\ \hline 
 				\endhead
 				
 				
@@ -120,49 +226,56 @@
 				 
 				\endlastfoot
 				
-				Upravljanje projektom 		&  &  &  &  &  &  & \\ \hline
-				Opis projektnog zadatka 	&  &  &  &  &  &  & \\ \hline
+				Upravljanje projektom 		& 5 &  &  &  &  &  & \\ \hline
+				Opis projektnog zadatka 	&  &  & 6 &  &  &  & \\ \hline
 				
-				Funkcionalni zahtjevi       &  &  &  &  &  &  &  \\ \hline
-				Opis pojedinih obrazaca 	&  &  &  &  &  &  &  \\ \hline
-				Dijagram obrazaca 			&  &  &  &  &  &  &  \\ \hline
-				Sekvencijski dijagrami 		&  &  &  &  &  &  &  \\ \hline
-				Opis ostalih zahtjeva 		&  &  &  &  &  &  &  \\ \hline
+				Funkcionalni zahtjevi       &  & 3 &  &  &  &  &  \\ \hline
+				Opis pojedinih obrazaca 	&  & 5 &  &  &  &  &  \\ \hline
+				Dijagram obrazaca 			&  & 5 &  &  &  &  &  \\ \hline
+				Sekvencijski dijagrami 		&  & 3 &  &  &  &  &  \\ \hline
+				Opis ostalih zahtjeva 		&  & 1 &  &  &  &  &  \\ \hline
 
-				Arhitektura i dizajn sustava	 &  &  &  &  &  &  &  \\ \hline
-				Baza podataka				&  &  &  &  &  &  &   \\ \hline
-				Dijagram razreda 			&  &  &  &  &  &  &   \\ \hline
-				Dijagram stanja				&  &  &  &  &  &  &  \\ \hline
-				Dijagram aktivnosti 		&  &  &  &  &  &  &  \\ \hline
-				Dijagram komponenti			&  &  &  &  &  &  &  \\ \hline
-				Korištene tehnologije i alati 		&  &  &  &  &  &  &  \\ \hline
-				Ispitivanje programskog rješenja 	&  &  &  &  &  &  &  \\ \hline
-				Dijagram razmještaja			&  &  &  &  &  &  &  \\ \hline
-				Upute za puštanje u pogon 		&  &  &  &  &  &  &  \\ \hline 
-				Dnevnik sastajanja 			&  &  &  &  &  &  &  \\ \hline
-				Zaključak i budući rad 		&  &  &  &  &  &  &  \\  \hline
+				Arhitektura i dizajn sustava&  & 1 &  &  &  &  &  \\ \hline
+				Baza podataka				&  &  & 15 &  &  &  &   \\ \hline
+				Dijagram razreda 			&  & 5 & 5 &  &  &  &   \\ \hline
+				Dijagram stanja				&  &  & 8 &  &  &  &  \\ \hline
+				Dijagram aktivnosti 		&  &  & 8 &  &  &  &  \\ \hline
+				Dijagram komponenti			&  &  & 8 &  &  &  &  \\ \hline
+				Korištene tehnologije i alati 		& 5 &  &  &  &  &  &  \\ \hline
+				Ispitivanje programskog rješenja 	&  & 10 &  &  &  &  &  \\ \hline
+				Dijagram razmještaja			&  &  & 5 &  &  &  &  \\ \hline
+				Upute za puštanje u pogon 		&  &  & 6 &  &  &  &  \\ \hline 
+				Dnevnik sastajanja 			&  &  & 1 &  &  &  &  \\ \hline
+				Zaključak i budući rad 		&  &  & 3 &  &  &  &  \\  \hline
 				Popis literature 			&  &  &  &  &  &  &  \\  \hline
 				&  &  &  &  &  &  &  \\ \hline \hline
-				\textit{Dodatne stavke kako ste podijelili izradu aplikacije} 			&  &  &  &  &  &  &  \\ \hline
-				\textit{npr. izrada početne stranice} 				&  &  &  &  &  &  &  \\ \hline 
-				\textit{izrada baze podataka} 		 			&  &  &  &  &  &  & \\ \hline 
-				\textit{spajanje s bazom podataka} 							&  &  &  &  &  &  &  \\ \hline
-				\textit{back end} 							&  &  &  &  &  &  &  \\  \hline
-				 							&  &  &  &  &  &  &\\  \hline
+				Izrada frontenda 		 	& 50 & 20 &  & 50 & 50 & 2 &  \\ \hline
+				Izrada backenda 		 	& 50 & 10 &  & 10 & 20 & 50 & 30 \\ \hline 
+				Sigurnost					& 5 &  &  &  &  & 30 & \\ \hline 
+				Spajanje na bazu 		 	& 5  &  &  &  &  & 5 & 5 \\ \hline 
+				Modeliranje baze 			& 5 & 2 &  &  &  & 10 & 30 \\ \hline
+				Puštanje u pogon		 	& 15  &  &  &  &  &  &  \\  \hline
+				 						
 				
 				
 			\end{longtabu}
-
-			\section*{Dijagrami pregleda promjena}
-		
-		\begin{figure}[H]
-			\includegraphics[scale=0.9]{slike/repository.png} %veličina slike u odnosu na originalnu datoteku i pozicija slike
-			\centering
-			\caption{Dijagrami aktivnosti na master grani}
-			\label{fig:aktivnost}
-		\end{figure}
 					
 					
 		\eject
+		
+		\section*{Dijagrami pregleda promjena}
+		
+		\begin{figure}[H]
+			\includegraphics[scale=0.7]{slike/gitlab1.png} %veličina slike u odnosu na originalnu datoteku i pozicija slike
+			\centering
+			\caption{Dijagrami aktivnosti na master grani}
+			\label{fig:aktivnost1}
+		\end{figure}
 	
-	
+		\begin{figure}[H]
+			\includegraphics[scale=0.7]{slike/gitlab2.png} %veličina slike u odnosu na originalnu datoteku i pozicija slike
+			\centering
+			\caption{Dijagrami aktivnosti na master grani}
+			\label{fig:aktivnost2}
+		\end{figure}
+		
